style(list-resource): fix title overflow

--- a/recoco/frontend/src/css/resources/resource_card.scss
+++ b/recoco/frontend/src/css/resources/resource_card.scss
@@ -1,66 +1,65 @@
 .card-resource {
+  max-height: 280px;
 
-    max-height: 280px;
+  &__body {
+    padding-top: 1.5rem;
+  }
 
-    &__body {
-            padding-top: 1.5rem;
-        }
-
-    &__category {
-        padding-bottom: 12px;
-        &--badge {
-            width: 8px;
-            height: 8px;
-            border-radius: 2px;
-            display: inline-block;
-        }
-        &--name {
-            font-size: 12px;
-            font-weight: 700;
-            vertical-align: middle;
-        }
+  &__category {
+    padding-bottom: 12px;
+    &--badge {
+      width: 8px;
+      height: 8px;
+      border-radius: 2px;
+      display: inline-block;
     }
-
-   &__title {
-        color: var(--light-text-action-high-blue-france, #000091);
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 150%; /* 27px */
-        text-decoration-line: underline;
-        text-decoration-style: solid;
-        text-decoration-skip-ink: none;
-        text-decoration-thickness: auto;
-        text-underline-offset: auto;
-        text-underline-position: from-font;
-        padding-bottom: 12px;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-   }
-
-   &__text {
-        overflow: hidden;
-        display: -webkit-box;
-        line-clamp: 4;
-        -webkit-box-orient: vertical;
-        color: var(--light-neutral-grey-200, #3A3A3A);
-        font-family: Marianne;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 150%; /* 21px */
-        padding-bottom: 12px;
-   }
-
-    &__footer {
-        &--label {
-            color: var(--light-text-mention-grey, #666);
-            font-size: 10px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 20px; /* 200% */
-        }
+    &--name {
+      font-size: 12px;
+      font-weight: 700;
+      vertical-align: middle;
     }
+  }
+
+  &__title {
+    color: var(--light-text-action-high-blue-france, #000091);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 27px */
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: none;
+    text-decoration-thickness: auto;
+    text-underline-offset: auto;
+    text-underline-position: from-font;
+    margin-bottom: 12px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+
+  &__text {
+    overflow: hidden;
+    display: -webkit-box;
+    line-clamp: 4;
+    -webkit-box-orient: vertical;
+    color: var(--light-neutral-grey-200, #3a3a3a);
+    font-family: Marianne;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 21px */
+    padding-bottom: 12px;
+  }
+
+  &__footer {
+    &--label {
+      color: var(--light-text-mention-grey, #666);
+      font-size: 10px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px; /* 200% */
+    }
+  }
 }
